--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 
 /* CSS Reset */
 html {
-	box-sizing: border-box;
 	font-size: 16px;
 	line-height: 1.5;
 }
@@ -10,7 +9,7 @@ html {
 *,
 *:before,
 *:after {
-	box-sizing: inherit;
+	box-sizing: border-box;
 }
 
 body,
@@ -63,11 +62,24 @@ h2 {
 
 a {
 	color: var(--primary);
+	font-weight: bold;
+}
+
+a:hover,
+a:active {
+	color: var(--dark);
+	background-color: var(--secondary);
+	border-radius: 4px;
+}
+
+a:focus {
+	border: 2px dotted var(--secondary);
 }
 
 nav {
 	text-align: right;
 	padding: 1rem;
+	margin-top: 0.5rem;
 }
 
 main {
@@ -86,12 +98,13 @@ footer {
 .intro {
 	text-align: center;
 	/*  Temporary footer and header */
-	min-height: calc(100vh - 112px);
+	min-height: calc(100vh - 128px);
 }
 
 .intro--inner {
 	max-width: 640px;
 	padding: 1rem;
+	position: relative;
 }
 
 /* UTIL CLASSES */
@@ -120,9 +133,72 @@ footer {
 	gap: 0.5rem;
 }
 
+/* BUTTONS */
+
+.btn {
+	padding: 8px 16px;
+	border-radius: 4px;
+	text-transform: uppercase;
+	text-decoration: none;
+	transition: all 0.2s ease-in;
+}
+
+.btn--primary {
+	border: 2px solid var(--primary);
+}
+
+.btn--primary:hover {
+	background: var(--secondary);
+	color: var(--dark);
+	border-color: var(--secondary);
+}
+
 /* FANCY TOUCH */
 
 ::selection {
 	background-color: var(--secondary);
 	color: var(--dark);
+}
+
+.bg-decor--dots {
+	width: 100%;
+	height: 100%;
+	background-image: url(assets/dots.svg);
+	background-repeat: repeat-x;
+	background-position: 0% 50%;
+	opacity: 0.6;
+	position: absolute;
+	top: 0;
+	right: 60%;
+}
+
+.bg-decor--sphere {
+	background-image: url(assets/sphere.png);
+	background-size: cover;
+	background-repeat: no-repeat;
+	position: absolute;
+	opacity: 0.4;
+}
+
+.bg-decor--sphere-l {
+	height: 120px;
+	width: 120px;
+	top: -150px;
+	right: -15%;
+}
+
+.bg-decor--sphere-m {
+	height: 80px;
+	width: 80px;
+	top: 150px;
+	right: -23%;
+	opacity: 0.2;
+}
+
+.bg-decor--sphere-s {
+	height: 40px;
+	width: 40px;
+	top: 20px;
+	right: 5%;
+	opacity: 0.1;
 }
