--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ ul {
 ol,
 ul {
 	list-style: none;
+	padding: 0;
+	margin: 0;
 }
 
 /* VARIABLES */
@@ -53,13 +55,16 @@ html {
 	font-family: var(--font-default);
 	background: var(--dark);
 	color: var(--light);
-	overflow-x: hidden;
 }
 
 @media screen and (max-width: 640px) {
 	html {
 		font-size: 16px;
 	}
+}
+
+main {
+	overflow-x: hidden;
 }
 
 h1,
@@ -118,10 +123,87 @@ footer {
 	height: 100%;
 }
 
+@media screen and (max-width: 640px) {
+	.intro {
+		min-height: calc(100vh - 110px);
+		height: 100%;
+	}
+}
+
 .intro--inner {
 	max-width: 740px;
 	padding: 1rem;
 	position: relative;
+}
+
+/* COMPONENTS */
+/* Social */
+
+.social {
+	position: absolute;
+	bottom: 0;
+	left: 1rem;
+}
+
+.social--item {
+	margin-bottom: 0.5rem;
+	line-height: 0;
+}
+
+.social--item a {
+	padding: 4px;
+	display: inline-block;
+	transition: transform 0.3s ease-in;
+	border: 1px solid transparent;
+	opacity: 0.7;
+}
+
+.social--item a:hover,
+.social--item a:focus {
+	background-color: transparent;
+	border: 1px solid var(--secondary);
+	transform: translateX(5px);
+	opacity: 1;
+}
+
+.social--item a:hover path,
+.social--item a:focus path {
+	fill: var(--secondary);
+}
+
+.social::after {
+	content: "";
+	display: block;
+	width: 1px;
+	height: 150px;
+	background: var(--light);
+	opacity: 0.6;
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+/* On mobile this element is horizontal */
+@media screen and (max-width: 640px) {
+	.social {
+		position: relative;
+		left: 0;
+	}
+
+	.social::after {
+		display: none;
+	}
+
+	.social--list {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		max-width: 100%;
+	}
+
+	.social--item {
+		margin: 0.5rem 1rem;
+	}
 }
 
 /* UTIL CLASSES */
@@ -218,4 +300,11 @@ footer {
 	top: 20px;
 	right: 5%;
 	opacity: 0.1;
+}
+
+/* Accessibiity */
+@media (prefers-reduced-motion) {
+	* {
+		transform: none !important;
+	}
 }
