--- a/style.css
+++ b/style.css
@@ -28,8 +28,15 @@ ul {
 	margin: 0;
 }
 
-/* VARIABLES */
+button {
+	background-color: transparent;
+	padding: 0;
+	margin: 0;
+	border: 0;
+}
 
+/* VARIABLES */
+html[data-theme="dark"],
 :root {
 	/* colors */
 	--dark: #00070b;
@@ -40,6 +47,15 @@ ul {
 	/* fonts */
 	--font-default: "Space Mono", monospace;
 	--font-decorative: "Changa", sans-serif;
+}
+
+html[data-theme="light"],
+:root {
+	/* colors */
+	--dark: #f1f1fd;
+	--secondary: #ac0092;
+	--primary: #005295;
+	--light: #00070b;
 }
 
 /* debug */
@@ -55,6 +71,7 @@ html {
 	font-family: var(--font-default);
 	background: var(--dark);
 	color: var(--light);
+	transition: background 0.2s ease-in;
 }
 
 @media screen and (max-width: 640px) {
@@ -93,10 +110,26 @@ header {
 	width: 100%;
 }
 
+/* TODO: this is temporary fix */
+@media screen and (max-width: 640px) {
+	header {
+		position: static;
+	}
+}
+
 nav {
 	text-align: right;
 	padding: 1rem;
 	margin-top: 0.5rem;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+@media screen and (max-width: 640px) {
+	nav {
+	}
 }
 
 main {
@@ -160,6 +193,10 @@ footer {
 	border: 1px solid var(--secondary);
 	transform: translateX(5px);
 	opacity: 1;
+}
+
+.social--item a path {
+	fill: var(--light);
 }
 
 .social--item a:hover path,
@@ -238,13 +275,6 @@ footer {
 	/* transition: all 0.2s ease-in; */
 }
 
-/* TODO: this is temporary fix */
-@media screen and (max-width: 640px) {
-	.btn {
-		display: none;
-	}
-}
-
 .btn--primary {
 	border: 2px solid var(--primary);
 }
@@ -260,6 +290,16 @@ footer {
 ::selection {
 	background-color: var(--secondary);
 	color: var(--dark);
+}
+
+.theme-switch {
+	cursor: pointer;
+	margin: 0 1rem 0 0;
+	display: flex;
+}
+
+.theme-switch svg {
+	fill: var(--light);
 }
 
 .bg-decor--dots {
@@ -282,7 +322,7 @@ footer {
 	opacity: 0.4;
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 1100px) {
 	.bg-decor--sphere {
 		display: none;
 	}
